src/tui/snapshots/shpool_table__tui__view__tests__create_input_midtyping.snap
---
source: src/tui/view.rs
assertion_line: 437
expression: "render_visible(&m, 70, 5)"
---
                          shpool (1 session)                          
  name  created  active                                               
 >main  30s      30s                                                  
  new session: foo_   (ret: create, esc: cancel)
