src/tui/snapshots/shpool_table__tui__view__tests__empty_list_shows_hint.snap
---
source: src/tui/view.rs
expression: "render_visible(&m, 76, 6)"
---
                            shpool (0 sessions)                             
  name  created  active                                                     
  (no sessions)
  j down   k up   spc attach   n new   d kill   D daemon   v vars   q quit
