src/tui/snapshots/shpool_table__tui__view__tests__error_replaces_footer.snap
---
source: src/tui/view.rs
assertion_line: 444
expression: "render_visible(&m, 60, 5)"
---
                     shpool (1 session)                     
  name  created  active                                     
 >main  30s      30s                                        
  ! daemon gone
