src/tui/snapshots/shpool_table__tui__view__tests__list_with_selection.snap
---
source: src/tui/view.rs
expression: "render_visible(&m, 76, 6)"
---
                            shpool (2 sessions)                             
  name   created  active                                                    
* main   2m       2m                                                        
 >build  3h       3h                                                        
  j down   k up   spc attach   n new   d kill   D daemon   v vars   q quit
