src/tui/snapshots/shpool_table__tui__view__tests__vars_view_editing_shows_prospective_target.snap
---
source: src/tui/view.rs
expression: "render_visible(&m, 72, 10)"
---
                             variables (2)                              
   editor    = vim   (1 session)
 > workspace = myproj   (2 sessions)                                    

  {workspace} attachments:
    {workspace}-edit         myproj-edit      pid 111  -> newproj-edit
    {workspace}-term         myproj-term      pid 222  -> newproj-term
  set workspace = newproj_   (ret: apply, esc: cancel)
