src/tui/snapshots/shpool_table__tui__view__tests__vars_view_empty.snap
---
source: src/tui/view.rs
expression: "render_visible(&m, 72, 6)"
---
                             variables (0)                              
  (no variables — shpool var set NAME VALUE)
  j/k: select, e: set value, esc: back
